[gd_scene load_steps=6 format=4]

[ext_resource type="Script" path="res://UI/time_left_bar.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dvnttmpn8jcg5" path="res://Art/Score Bar Under.png" id="2"]
[ext_resource type="Texture2D" uid="uid://byt5r63fmooe3" path="res://Art/Score Bar White.png" id="3"]
[ext_resource type="Texture2D" uid="uid://ckfwtpue0uh08" path="res://Art/Score Bar Purple.png" id="4"]
[ext_resource type="Texture2D" uid="uid://dly7mebykpf3d" path="res://Art/Hourglass.png" id="5"]

[node name="TimeLeftBar" type="Control"]
custom_minimum_size = Vector2(492, 108)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="ProgressTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="White Bar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_right = 492.0
offset_bottom = 108.0
value = 80.0
texture_under = ExtResource("2")
texture_progress = ExtResource("3")

[node name="Purple Bar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_right = 492.0
offset_bottom = 108.0
value = 50.0
texture_progress = ExtResource("4")

[node name="Counter" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 492.0
offset_bottom = 108.0

[node name="Icon" type="TextureRect" parent="Counter"]
layout_mode = 0
offset_left = 252.0
offset_top = 18.0
offset_right = 306.0
offset_bottom = 90.0
texture = ExtResource("5")
stretch_mode = 2

[node name="LabelContainer" type="SubViewportContainer" parent="Counter"]
custom_minimum_size = Vector2(144, 72)
layout_mode = 0
offset_left = 144.0
offset_top = 18.0
offset_right = 288.0
offset_bottom = 90.0
pivot_offset = Vector2(72, 36)
stretch = true
stretch_shrink = 6

[node name="SubViewport" type="SubViewport" parent="Counter/LabelContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(24, 12)
render_target_update_mode = 0

[node name="Label" type="Label" parent="Counter/LabelContainer/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9686269760131836, 1, 0.9725490212440491, 1)
theme_override_colors/font_outline_color = Color(0.05490199849009514, 0.06666669994592667, 0.062745101749897, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "3"
horizontal_alignment = 1

[node name="Last Turn" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 492.0
offset_bottom = 108.0
pivot_offset = Vector2(246, 54)

[node name="LabelContainer" type="SubViewportContainer" parent="Last Turn"]
custom_minimum_size = Vector2(432, 72)
layout_mode = 0
offset_left = 30.0
offset_top = 18.0
offset_right = 462.0
offset_bottom = 90.0
pivot_offset = Vector2(216, 24)
stretch = true
stretch_shrink = 6

[node name="SubViewport" type="SubViewport" parent="Last Turn/LabelContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(72, 12)
render_target_update_mode = 4

[node name="Label" type="Label" parent="Last Turn/LabelContainer/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9686269760131836, 1, 0.9725490212440491, 1)
theme_override_colors/font_outline_color = Color(0.05490199849009514, 0.06666669994592667, 0.062745101749897, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "last round!"

[connection signal="timeout" from="ProgressTimer" to="." method="_on_progress_timer_timeout"]
